Simplified query param

--- a/index.jade
+++ b/index.jade
@@ -27,7 +27,7 @@ html
       }
   body
     .left-half
-      if locals.rephrase_left_half
+      if locals.left === 'alt'
         | Left side
       else
         | Left half
