Added text alignment for easier detection of changes

--- a/index.jade
+++ b/index.jade
@@ -15,6 +15,7 @@ html
         float: left;
         width: 50%;
         height: 100%;
+        text-align: center;
       }
 
       .half--left {
