Got our environment passing working. Finally ready to get started on our proof of concept

--- a/index.jade
+++ b/index.jade
@@ -29,7 +29,7 @@ html
       }
   body
     .half.half--left
-      if locals.left === 'alt'
+      if locals.env === 'alt'
         | Left side
       else
         | Left half
