--- a/prototype.jade
+++ b/prototype.jade
@@ -46,8 +46,8 @@ html
               'position: absolute',
               'width: 50px',
               'height: 50px',
-              'background: #CC9999',
-              'border: 2px solid #CC0000',
+              'background: #33CC33',
+              'border: 2px solid #00FF00',
               'opacity: 0.5',
             ].join(';');
             document.body.appendChild(this.overlayEl);
