Fixed up off-by-one issue

--- a/prototype.jade
+++ b/prototype.jade
@@ -3,6 +3,12 @@ html
   head
     title gist-gemini-fancy prototype
     style.
+      /* Guarantee overlays automatically include border in widths */
+      * {
+        box-sizing: border-box;
+      }
+
+      /* Perform nice resets */
       html, body {
         height: 100%;
       }
@@ -59,22 +65,23 @@ html
         };
         Overlay.prototype.update = function (evt, pointer, moveVector) {
           // If the move vector's X dimension is normal
+          // DEV: We use `pointerDownPoint` instead of `dragStartPoint` for better cursor positioning
           if (moveVector.x >= 0) {
-            this.overlayEl.style.left = this.dragStartPoint.x + 'px';
+            this.overlayEl.style.left = this.pointerDownPoint.x + 'px';
             this.overlayEl.style.width = moveVector.x + 'px';
           // Otherwise (inverted), use opposite parameters)
           } else {
             // DEV: Technically we are subtracting moveVector as it's a negative value
-            this.overlayEl.style.left = this.dragStartPoint.x + moveVector.x + 'px';
+            this.overlayEl.style.left = this.pointerDownPoint.x + moveVector.x + 'px';
             this.overlayEl.style.width = (-1 * moveVector.x) + 'px';
           }
 
           // Similar behavior for Y dimension
           if (moveVector.y >= 0) {
-            this.overlayEl.style.top = this.dragStartPoint.y + 'px';
+            this.overlayEl.style.top = this.pointerDownPoint.y + 'px';
             this.overlayEl.style.height = moveVector.y + 'px';
           } else {
-            this.overlayEl.style.top = this.dragStartPoint.y + moveVector.y + 'px';
+            this.overlayEl.style.top = this.pointerDownPoint.y + moveVector.y + 'px';
             this.overlayEl.style.height = (-1 * moveVector.y) + 'px';
           }
         };
