Updated our TODOs

--- a/prototype.jade
+++ b/prototype.jade
@@ -128,9 +128,8 @@ html
         };
 
         // Make image draggable
-        // TODO: Make overlay which is bound to edges of img
         void new Overlay(imgEl);
 
-        // TODO: Fake drag move...
+        // TODO: Fake drag move for easier testing
         //- https://github.com/twolfson/mockdesk/blob/0.14.2/lib/js/scripts/drag-rectangle.js
       });
