--- a/prototype.jade
+++ b/prototype.jade
@@ -67,6 +67,13 @@ html
             document.body.appendChild(this.overlayEl);
           }
 
+          // Correct pointer down location with scrolling
+          this.correctedDownPoint = {
+            x: this.pointerDownPoint.x + document.body.scrollLeft,
+            y: this.pointerDownPoint.y + document.body.scrollTop
+          }
+          console.log(document.body.scrollLeft);
+
           // Update our box position
           // TODO: Update cursor via CSS
           this.update(evt, pointer, {x: 0, y: 0});
@@ -76,21 +83,21 @@ html
           // DEV: We use `pointerDownPoint` instead of `dragStartPoint` for better cursor positioning
           var left, top, width, height;
           if (moveVector.x >= 0) {
-            left = this.pointerDownPoint.x;
+            left = this.correctedDownPoint.x;
             width = moveVector.x;
           // Otherwise (inverted), use opposite parameters)
           } else {
             // DEV: Technically we are subtracting moveVector as it's a negative value
-            left = this.pointerDownPoint.x + moveVector.x;
+            left = this.correctedDownPoint.x + moveVector.x;
             width = (-1 * moveVector.x);
           }
 
           // Similar behavior for Y dimension
           if (moveVector.y >= 0) {
-            top = this.pointerDownPoint.y;
+            top = this.correctedDownPoint.y;
             height = moveVector.y;
           } else {
-            top = this.pointerDownPoint.y + moveVector.y;
+            top = this.correctedDownPoint.y + moveVector.y;
             height = (-1 * moveVector.y);
           }
 
