--- a/index.jade
+++ b/index.jade
@@ -33,4 +33,8 @@ html
         | Left side
       else
         | Left half
-    .half.half--right Right half
+    .half.half--right
+      if locals.env === 'alt'
+        | Right side
+      else
+        | Right half
