--- a/performance.jade
+++ b/performance.jade
@@ -44,10 +44,7 @@ html
 
     //- Define an output area for images
     p(style="margin-bottom: 0") Results:
-    div(style="overflow-x: scroll;")
-      table
-        tr#title-tr
-        tr#body-tr
+    div#results
 
     script.
       document.addEventListener('DOMContentLoaded', function handleReady () {
@@ -69,27 +66,26 @@ html
           var compareSetEls = document.querySelectorAll('[data-compare-set]');
 
           // Find our output targets
-          var titleTrEl = document.querySelector('#title-tr');
-          var bodyTrEl = document.querySelector('#body-tr');
+          var resultsEl = document.querySelector('#results');
 
           // Iterate over our sets
           Array.prototype.forEach.call(compareSetEls, function forEachCompareSetEl (compareSetEl, i) {
             // Find our source images
             var currentImg = compareSetEl.querySelector('[data-compare-type=current]');
-            var diffImg = compareSetEl.querySelector('[data-compare-type=diff]');
+            var refImg = compareSetEl.querySelector('[data-compare-type=ref]');
 
             // Create a canvas
             // https://github.com/scijs/get-pixels/blob/7c447cd979637b31e47e148f238a1e71611af481/dom-pixels.js#L14-L18
             var canvasEl = document.createElement('canvas');
-            canvasEl.width = diffImg.width;
-            canvasEl.height = diffImg.height;
+            canvasEl.width = refImg.width;
+            canvasEl.height = refImg.height;
             var context = canvasEl.getContext('2d');
 
-            // Load our diff into the canvas
+            // Load our reference into the canvas
             // https://developer.mozilla.org/en-US/docs/Web/API/CanvasRenderingContext2D/drawImage
-            context.drawImage(diffImg, 0, 0);
+            context.drawImage(refImg, 0, 0);
 
-            // Draw our selection to clip and draw image in clipping
+            // Update our selected portion on reference and draw image in clipping
             // DEV: This is probably the most efficient way (outside of web workers) because
             //   we would have to draw image twice no matter what
             //   Maybe there's double pixel updates but I don't thinks so
@@ -101,17 +97,46 @@ html
             context.clip();
             context.drawImage(currentImg, 0, 0);
 
-            // Shrink canvas for output
+            // Duplicate reference image and shrink both canvas/image for output
             var imgHeight = 250;
-            canvasEl.style.height = 250 + 'px';
+            canvasEl.style.height = imgHeight + 'px';
+            var refImgClone = refImg.cloneNode();
+            refImgClone.style.height = imgHeight + 'px';
 
-            // Output our updated diff to table
-            var titleTdEl = document.createElement('td');
-            titleTdEl.textContent = 'path/to/image/' + i + '/Chrome';
-            titleTrEl.appendChild(titleTdEl);
-            var bodyTdEl = document.createElement('td');
-            bodyTdEl.appendChild(canvasEl);
-            bodyTrEl.appendChild(bodyTdEl);
+            //  Generate resultcontent
+            var resultGroupEl = document.createElement('div');
+            var titleEl = document.createElement('div');
+            titleEl.textContent = 'path/to/image/' + i + '/Chrome';
+            resultGroupEl.appendChild(titleEl);
+
+            // <table><tr><td>Original:</td><td>Updated:</td></tr>
+            var tableEl = document.createElement('table');
+            var titleTrEl = document.createElement('tr');
+            var titleOriginalTdEl = document.createElement('td');
+            titleOriginalTdEl.textContent = 'Original:';
+            titleTrEl.appendChild(titleOriginalTdEl);
+            var titleUpdatedTdEl = document.createElement('td');
+            titleUpdatedTdEl.textContent = 'Updated:';
+            titleTrEl.appendChild(titleUpdatedTdEl);
+            tableEl.appendChild(titleTrEl);
+
+            // <table><tr><td><img=ref></td><td><img=updated-ref></td></tr>
+            var bodyTrEl = document.createElement('tr');
+            var bodyOriginalTdEl = document.createElement('td');
+            bodyOriginalTdEl.appendChild(refImgClone);
+            bodyTrEl.appendChild(bodyOriginalTdEl);
+            var bodyUpdatedTdEl = document.createElement('td');
+            bodyUpdatedTdEl.appendChild(canvasEl);
+            bodyTrEl.appendChild(bodyUpdatedTdEl);
+            tableEl.appendChild(bodyTrEl);
+
+            // Append our result content
+            resultGroupEl.appendChild(tableEl);
+            resultsEl.appendChild(resultGroupEl);
+
+            // TODO: When bulk update is accepted, send overwrite requests to server with new image as "Ref"
+            //   and use `?1` trick to refresh images
+            //   then re-run comparisons for all curr
           });
         }
       });
