Added offset for subsection indication

--- a/performance.jade
+++ b/performance.jade
@@ -105,6 +105,7 @@ html
 
             //  Generate resultcontent
             var resultGroupEl = document.createElement('div');
+            resultGroupEl.style.marginLeft = '20px';
             var titleEl = document.createElement('div');
             titleEl.textContent = 'path/to/image/' + i + '/Chrome';
             resultGroupEl.appendChild(titleEl);
